fix: markup and vertical spacing in signup form

--- a/website/src/components/signup-form/index.module.scss
+++ b/website/src/components/signup-form/index.module.scss
@@ -139,6 +139,12 @@
     margin-bottom: var(--spacing-3);
   }
 
+  &__subheading {
+    @include text-styles.header-4;
+    margin: 0;
+    margin-bottom: var(--spacing-3);
+  }
+
   &__text {
     @include text-styles.text-base;
     margin: 0;
